<resources>
    <string name="app_name">7MinutesWorkoutApp</string>
    <string name="start">START</string>
    <string name="start_image">Start image</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exercise_image">Exercise image</string>
    <string name="exercise_name">Exercise name</string>
    <string name="upcoming_exercise">Upcoming Exercise:</string>
    <string name="end">END</string>
    <string name="check_sign_image">Check sign image</string>
    <string name="congratulation_text">Congratulations!\nYou have done the workout.</string>
    <string name="finish">FINISH</string>
    <string name="warningDescription">You will lose your workout progress.\nDo you want to go back?</string>
    <string name="warningTitleText">Are you sure?</string>
    <string name="calculator">Calculator</string>
    <string name="bmi">BMI</string>
    <string name="weight_hint_metric">WEIGHT (in kg)</string>
    <string name="weight_hint_us">WEIGHT (in lbs)</string>
    <string name="height_hint_metric">HEIGHT (in cm)</string>
    <string name="calculate">CALCULATE</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="feet">FEET</string>
    <string name="inch">INCH</string>
    <string name="history">History</string>
    <string name="history_image_description">History image</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
</resources>