<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".FinishActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/finishActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/end"
        android:textColor="@color/colorAccent"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_circular_accent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/doneImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/check_sign_image"
            android:src="@drawable/ic_done_borderless" />

    </LinearLayout>


    <TextView
        android:id="@+id/congratulationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/congratulation_text"
        android:textColor="@color/darkGrey"
        android:textSize="22sp" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:backgroundTint="@color/colorDarkAccent"
        android:text="@string/finish"
        android:textSize="22sp"
        android:textStyle="bold" />

</LinearLayout>