<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_main_layout_padding"
    tools:context=".start.StartActivity">

    <ImageView
        android:id="@+id/headlineImage"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:contentDescription="@string/start_image"
        android:src="@drawable/img_main_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/startFrameLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/item_circular_accent_ripple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headlineImage">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/bmiFrameLayout"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/item_circular_color_accent_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/historyFrameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startFrameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bmi"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </FrameLayout>

    <TextView
        android:id="@+id/calculatorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/calculator"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/bmiFrameLayout"
        app:layout_constraintStart_toStartOf="@id/bmiFrameLayout"
        app:layout_constraintTop_toBottomOf="@id/bmiFrameLayout" />

    <FrameLayout
        android:id="@+id/historyFrameLayout"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/item_circular_color_accent_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bmiFrameLayout"
        app:layout_constraintTop_toBottomOf="@id/startFrameLayout">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/history_image_description"
            android:src="@drawable/ic_history" />

    </FrameLayout>

    <TextView
        android:id="@+id/historyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/history"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/historyFrameLayout"
        app:layout_constraintStart_toStartOf="@id/historyFrameLayout"
        app:layout_constraintTop_toBottomOf="@id/historyFrameLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>